# cellular_automat

./: CMakeLists.txt  Cell.h  Config_Import.h  Grid.h  INFO.txt  README.md  SFML_export.h  main.cpp  pulsar.txt  test.cpp
txt/: 4.txt  bad.txt  big.txt  head.txt  test0.txt  test1.txt  test2.txt
