cmake_minimum_required(VERSION 3.23)
project(cellular_automata)

set(CMAKE_CXX_STANDARD 14)
add_executable(cellular_automata main.cpp Cell.h Config_Import.h Grid.h SFML_export.h)

set(SFML_STATIC_LIBRARIES TRUE)
set(SFML_DIR C:/SFML/lib/cmake/SFML)


find_package(SFML COMPONENTS system window graphics audio network REQUIRED)
include_directories(C:/SFML/include)
target_link_libraries(cellular_automata sfml-system sfml-window sfml-graphics sfml-audio)
